# android_ndk_samples

EndlessTunnel/app/: build.gradle
EndlessTunnel/app/src/main/: AndroidManifest.xml
EndlessTunnel/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
EndlessTunnel/gradle/wrapper/: gradle-wrapper.properties
GLES3Jni/app/: build.gradle
GLES3Jni/app/src/main/: AndroidManifest.xml
GLES3Jni/app/src/main/cpp/: gles3jni.cpp
GLES3Jni/app/src/main/res/values/: strings.xml
GLES3Jni/gradle/wrapper/: gradle-wrapper.properties
Hello-Oboe/app/: build.gradle
Hello-Oboe/app/src/main/: AndroidManifest.xml
Hello-Oboe/app/src/main/cpp/: CMakeLists.txt  hello-oboe.cpp
Hello-Oboe/app/src/main/res/layout/: activity_main.xml
Hello-Oboe/gradle/wrapper/: gradle-wrapper.properties
Hello-cdep/: cdep.sha256
Hello-cdep/.cdep/modules/: cdep-dependencies-config.cmake
Hello-cdep/app/: build.gradle
Hello-cdep/app/src/main/: AndroidManifest.xml
Hello-cdep/app/src/main/cpp/: CMakeLists.txt  hello-cdep.cpp
Hello-cdep/gradle/wrapper/: gradle-wrapper.properties
Hello-jni/app/: build.gradle
Hello-jni/app/src/main/: AndroidManifest.xml
Hello-jni/app/src/main/cpp/: hello-jni.c
Hello-jni/gradle/wrapper/: gradle-wrapper.properties
Hello-jnicallback/app/: build.gradle
Hello-jnicallback/app/src/main/: AndroidManifest.xml
Hello-jnicallback/app/src/main/cpp/: CMakeLists.txt  hello-jnicallback.c
Hello-jnicallback/gradle/wrapper/: gradle-wrapper.properties
Hello-libs/app/: build.gradle
Hello-libs/app/src/main/: AndroidManifest.xml
Hello-libs/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
Hello-libs/gradle/wrapper/: gradle-wrapper.properties
Hello-neon/app/: build.gradle
Hello-neon/app/src/main/: AndroidManifest.xml
Hello-neon/app/src/main/cpp/: CMakeLists.txt  helloneon.c
Hello-neon/gradle/wrapper/: gradle-wrapper.properties
Plasma/app/: build.gradle
Plasma/app/src/main/: AndroidManifest.xml
Plasma/app/src/main/cpp/: CMakeLists.txt  plasma.c
Plasma/gradle/wrapper/: gradle-wrapper.properties
hello-gl2/app/: build.gradle
hello-gl2/app/src/main/: AndroidManifest.xml
hello-gl2/app/src/main/cpp/: gl_code.cpp
hello-gl2/gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
